fix(istex-logo): fixed the Istex logo baseline font being thicker and on 3 lines instead of 2 on Firefox

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,6 @@
 .baseline {
   color: #458ca5;
   background-color: #fff;
-  font-weight: bold;
   font-size: .644rem;
   font-style: italic;
 }
